# context-protocol

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  modules.yaml  project_map.html  pyproject.toml
.add-framework/: PROTOCOL.md  doctor-ignore.yaml
.add-framework/state/: REPAIR_REPORT.md  SYNC_Project_Health.md  SYNC_Project_State.md  SYNC_Project_State_archive_2025-12.md
.add-framework/views/: VIEW_Document_Create_Module_Documentation.md  VIEW_Implement_Write_Or_Modify_Code.md  VIEW_Review_Evaluate_Changes.md
.context-protocol/: doctor-ignore.yaml
.context-protocol/state/: REPAIR_REPORT.md  SYNC_Project_Health.md  SYNC_Project_State.md  SYNC_Project_State_archive_2025-12.md
.context-protocol/views/: VIEW_Debug_Investigate_And_Fix_Issues.md  VIEW_Implement_Write_Or_Modify_Code.md
.ngram/: CLAUDE.md  GEMINI.md  PRINCIPLES.md  PROTOCOL.md  config.yaml  doctor-ignore.yaml
.ngram/repairs/: reviews_2025-12-19.md
.ngram/skills/: SKILLS_Skill_File_Index_And_Manifest.md  SKILL_Solve_Markers_Triage_Escalations_Propositions_And_Todos.md
.ngram/state/: REPAIR_REPORT.md  SYNC_Project_Health.md  SYNC_Project_State.md  SYNC_Project_State_archive_2025-12.md  SYNC_Schema_v1.2_Migration.md  conversation_history.json
.ngram/templates/: ALGORITHM_TEMPLATE.md  BEHAVIORS_TEMPLATE.md  CONCEPT_TEMPLATE.md  HEALTH_TEMPLATE.md  IMPLEMENTATION_TEMPLATE.md  OBJECTIFS_TEMPLATE.md  PATTERNS_TEMPLATE.md  TOUCHES_TEMPLATE.md  VALIDATION_TEMPLATE.md
.ngram/traces/: 2025-12-19.jsonl
.ngram/views/: GLOBAL_LEARNINGS.md  VIEW_Document_Create_Module_Documentation.md  VIEW_Extend_Add_Features_To_Existing.md  VIEW_Implement_Write_Or_Modify_Code.md  VIEW_Review_Evaluate_Changes.md
data/: ARCHITECTURE — Cybernetic Studio.md
docs/: SYNC_Project_Repository_Map.md  SYNC_Project_Repository_Map_archive_2025-12.md  map.md
docs/building/: ALGORITHM_Ngram_Graph_System.md  BEHAVIORS_Ngram_Graph_System.md  IMPLEMENTATION_Ngram_Graph_System.md  PATTERNS_Ngram_Graph_System.md  SYNC_Ngram_Graph_System.md  VALIDATION_Ngram_Graph_System.md  mapping.yaml
ngram/: agent_cli.py  agent_graph.py  cli.py  context.py  docs_fix.py  doctor.py  doctor_checks.py  doctor_checks_content.py  doctor_checks_docs.py  doctor_checks_naming.py  doctor_checks_quality.py  doctor_checks_sync.py  doctor_files.py  doctor_graph.py  doctor_report.py  github.py  init_cmd.py  project_map_html.py  prompt.py  repair.py  repair_core.py  repair_escalation_interactive.py  repair_instructions.py  repair_instructions_docs.py  repair_report.py  repair_verification.py  repo_overview.py  repo_overview_formatters.py  solve_escalations.py  status_cmd.py  sync.py  utils.py  validate.py
templates/: CLAUDE_ADDITION.md  CODEX_SYSTEM_PROMPT_ADDITION.md  GEMINI_SYSTEM_PROMPT_ADDITION.md  modules.yaml
(+516 files in other folders)
