[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-protocol"
version = "0.1.0"
description = "A context management protocol for AI agents working on code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mind Protocol" }
]
keywords = [
    "ai",
    "agents", 
    "context",
    "documentation",
    "llm",
    "claude"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mind-protocol/context-protocol"
Repository = "https://github.com/mind-protocol/context-protocol"

[project.scripts]
context-protocol = "context_protocol.cli:main"

# Include templates in the package
[tool.hatch.build.targets.wheel]
packages = ["src/context_protocol"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "context_protocol/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/docs",
    "/README.md",
    "/pyproject.toml",
]
