[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-framework"
version = "0.1.0"
description = "AI-Driven Development Framework - Autonomous agents for code health, repair, and documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mind Protocol" }
]
keywords = [
    "ai",
    "agents", 
    "context",
    "documentation",
    "llm",
    "claude"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mind-protocol/ADD-framework"
Repository = "https://github.com/mind-protocol/ADD-framework"

[project.scripts]
add-framework = "add_framework.cli:main"

# Include templates in the package
[tool.hatch.build.targets.wheel]
packages = ["src/add_framework"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "add_framework/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/docs",
    "/README.md",
    "/pyproject.toml",
]
